Adjust a back and fix z-index on cta-inner:before

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -26,10 +26,6 @@ p {
   line-height: 1.75;
 }
 
-a {
-  z-index: 100;
-}
-
 .text-faded {
   color: rgba(255, 255, 255, 0.3);
 }
@@ -171,6 +167,7 @@ a {
   left: -0.5rem;
   right: -0.5rem;
   border: 0.25rem solid rgba(255, 255, 255, 0.85);
+  z-index: -10;
 }
 
 @media (min-width: 992px) {
